--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 marsh_herbivory_surviability_running.py
 marsh_herbivory_surviability_running_2.py
 marsh_herbivory_surviability_running_2_Mesa_update.py
-
+marsh_herbivory_surviability_running.py
